--- a/frontend/account-management/src/index.html
+++ b/frontend/account-management/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+  <link type="css" rel="stylesheet" href="frontend/account-management/node_modules/bootstrap/dist/css/bootstrap.css" crossorigin="anonymous">
 </head>
 <body>
   <app-root></app-root>
